# korea_apartment_price

./: .gitignore  LICENSE.md  README.md  kospi_and_housing.ipynb  pyproject.toml  requirements.txt
data/: config.example.json
data/misc/: region_code.txt
korea_apartment_price/: __init__.py  apartment.py  config.py  db.py  deposit_interest_rate.py  geocode.py  kb_liiv.py  path.py  region_code.py  shortcuts.py
korea_apartment_price/utils/: __init__.py  converter.py  downloader.py  finder.py  throttle.py
korea_apartment_price/webapp/: __init__.py  deps.py  main.py  model.py  models.py  nginx.example.conf  types.py
korea_apartment_price/webapp/frontend/: package-lock.json  package.json
korea_apartment_price/webapp/frontend/public/: index.html
korea_apartment_price/webapp/frontend/src/: App.tsx  setupProxy.js
korea_apartment_price/webapp/frontend/src/components/: DenseTable.tsx  Frame.tsx  SimpleQuestionModal.tsx
korea_apartment_price/webapp/frontend/src/constants/: index.ts
korea_apartment_price/webapp/frontend/src/contexts/: AuthContext.tsx  types.ts
korea_apartment_price/webapp/frontend/src/misc/: debounce.ts  routeConfig.tsx  useRefWithCallback.ts
korea_apartment_price/webapp/routers/: account.py  apartment.py  fav.py  region_code.py  volume.py
scripts/: download_deposit_interest_rate.py  download_geocode.py  download_kb_aprtlst.py  download_rents.py  download_trades.py  fetch_kb_orderbook.py  gen_report.py  get_building_ledger.py  orderbook_region_code.csv  proxy_lst.txt  region_code.tmpl.csv  rents_region_code.csv  report_apart_list.csv
(+36 files in other folders)
